--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "faiss-node": "^0.3.0",
     "langchain": "^0.0.144",
-    "openai": "^4.4.0"
+    "openai": "^4.4.0",
+    "prompts": "^2.4.2"
   }
 }
